--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@arcjet/next": "1.0.0-beta.10",
     "@clerk/nextjs": "^6.31.4",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "next": "15.4.2-canary.15",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "3.25.75"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
