--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "shadcn": "pnpm dlx shadcn@latest add"
   },
   "dependencies": {
     "@arcjet/next": "1.0.0-beta.10",
     "@clerk/nextjs": "^6.31.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.541.0",
     "next": "15.4.2-canary.15",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "3.25.75"
   },
   "devDependencies": {
@@ -26,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2-canary.15",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
